<resources>
    <string name="app_name">MapNotes</string>

    <string name="home_fragment">Заметки на карте</string>
    <string name="login_fragment">Вход</string>
    <string name="register_fragment">Регистрация</string>
    <string name="profile_fragment">Профиль</string>
    <string name="pass_fragment">Сброс пароля</string>
    <string name="add_fragment">Создание заметки</string>
    <string name="show_fragment">Смотреть заметку</string>

    <!--auth-->
    <string name="entering_account" translatable="false">Вход</string>
    <string name="enter_google_one_tap">Войдите c  Google в один клик,</string>
    <string name="text_body_google" translatable="false">чтобы войти в один клик, убедитесь, что в Настройках создан аккаунт Google.</string>
    <string name="check_settings_for_account" translatable="false"><u>Посмотреть настройки</u></string>
    <string name="enter_google" translatable="false">Войти через Google</string>
    <string name="text_or">или</string>
    <string name="enter_email">Войдите по почте</string>
    <string name="email_address">Адрес почты</string>
    <string name="password">Пароль</string>
    <string name="forgot_password" translatable="false">Забыли пароль? </string>
    <string name="restore_password" translatable="false"><u>Восстановить пароль</u></string>
    <string name="no_account" translatable="false">Нет аккаунта? </string>
    <string name="create_account" translatable="false"><u>Создать новый аккаунт</u></string>
    <string name="login" translatable="false">Войти</string>
    <string name="email" translatable="false">Почта</string>
    <string name="confirm_email_impact" translatable="false"><u>Подтвердить почту</u></string>
    <string name="logout" translatable="false"><u>Выйти из аккаунта</u></string>
    <string name="creating_account" translatable="false">Регистрация</string>
    <string name="register_account" translatable="false">Создайте аккаунт,</string>
    <string name="register_account_explain" translatable="false">используйте реальный адрес почты, используется для восстановления пароля.</string>
    <string name="register_password_explain" translatable="false">Пароль должен быть от 8 до 128 символов, без пробелов, только латинские буквы, минимум одна заглавная и одна строчная буквы, минимум одна цифра от 0 до 9 и один символ вида ~ ! @ # $ % &amp; * _;</string>
    <string name="register" translatable="false">Создать аккаунт</string>
    <string name="confirm_password" translatable="false">Подтверждение пароля</string>
    <string name="register_exist" translatable="false">Уже есть аккаунт?</string>
    <string name="login_account" translatable="false"><u>Войдите по почте и паролю</u></string>
    <string name="account" translatable="false">Аккаунт</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="login_success" translatable="false">Авторизация успешно!</string>
    <string name="register_success" translatable="false">Регистрация успешно!</string>
    <string name="pass_reset" translatable="false">Ссылка сброса пароля отправлена на почту %s</string>
    <string name="enter_email_change">Введите адрес почты,</string>
    <string name="password_change_explain" translatable="false">Мы вышлем ссылку с подтверждением на почту.</string>
    <string name="password_link_explain" translatable="false">Для смены пароля скопируйте ссылку из письма в поле \"Ссылка из письма\".</string>
    <string name="password_enter_explain" translatable="false">Введите новый пароль дважды и нажмите кнопку\"Сменить пароль\"</string>
    <string name="confirm_code_send" translatable="false">Выслать ссылку на почту</string>
    <string name="password_change" translatable="false">Сменить пароль</string>
    <string name="reset_link" translatable="false">Ссылка из письма</string>
    <string name="pass_success" translatable="false">Пароль успешно изменен!</string>
    <string name="user">Пользователь</string>
    <string name="user_name">Имя пользователя</string>
    <string name="clear">Очистить</string>


    <!--bottom-->
    <string name="map">Карта</string>
    <string name="create">Создать</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>


    <!--message-->
    <string name="message_400_000" translatable="false">Что то пошло не так, проверьте интернет, попробуйте еще раз.</string>

    <string name="message_400_005" translatable="false">Неверный формат почты.</string>
    <string name="message_400_006" translatable="false">Пароль меньше 8 символов или пароли не равны.</string>

    <string name="message_400_038" translatable="false"> Google Services не отвечают, проверьте интернет, настройки приложений.</string>
    <string name="message_400_039" translatable="false">Вход в Google аккаунт не выполнен.</string>
    <string name="message_400_051">Ошибка: авторизация %s</string>
    <string name="message_400_052">Ошибка: неверно введены почта или пароль</string>
    <string name="message_400_053">Ошибка: регистрация %s</string>
    <string name="message_400_054">Ошибка: неверно введены имя, почта, пароль слабый или не совпадает</string>
    <string name="message_400_055">Ошибка: регистрация, неверно введено имя пользователя</string>
    <string name="message_400_056">Ошибка: регистрация, обновление аккаунта %s</string>

    <string name="message_400_057">Ошибка: Google OneTap %s</string>
    <string name="message_400_058">Ошибка: Google OneTap авторизация Firebase %s</string>
    <string name="message_400_059">Ошибка: Google OneTap клиент</string>
    <string name="message_400_060">Ошибка: Google OneTap токен</string>

    <string name="message_400_061">Ошибка: неверное имя пользователя</string>
    <string name="message_400_062">Ошибка: неверный адрес почты</string>
    <string name="message_400_063">Ошибка: пароль слишком слабый</string>
    <string name="message_400_064">Ошибка: пароли не совпадают</string>

    <string name="message_400_065">Ошибка: пароль пустой или длина меньше 8 символов</string>

    <string name="message_400_068">Ошибка: сброс пароля %s</string>
    <string name="message_400_069">Ошибка: неверная ссылка из письма %s</string>
    <string name="message_400_070">Ошибка: верификация пароля %s</string>
    <string name="message_400_071">Ошибка: Firebase базы данных с заметкой %s</string>
    <string name="message_400_072">Ошибка: таймаут соединения</string>
    <string name="message_400_073">Ошибка: нет сети интернет</string>
    <string name="message_400_074">Ошибка: нет авторизации</string>
    <string name="message_400_075">Без разрешений положение на карте будет недоступно</string>
    <string name="message_400_076">Без геолокации положение на карте будет недоступно</string>
    <string name="message_400_077">Без точной геолокации положение на карте будет с точностью до 1 км</string>
    <string name="message_400_078">Работа в фоновом режиме дает актуальное положение на карте</string>
    <string name="message_400_079">Ошибка: Firebase базы данных с пользователем %s</string>
    <string name="message_400_080">Ошибка: Firebase хранилища %s</string>

    <!-- temp-->
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor.
    </string>

    <string name="fab">Fab</string>
    <string name="add">Добавить</string>
    <string name="edit">Изменить</string>
    <string name="empty_fragment">Empty Fragment</string>
    <string name="search_notes">Search notes</string>
    <string name="back_arrow">Back arrow</string>
    <string name="place_title">Название места</string>
    <string name="place_description">Описание</string>
    <string name="lattitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="camera">Камера</string>
    <string name="drive">Диск</string>
    <string name="unsplash">Облако</string>
    <string name="video">Видео</string>
    <string name="audio">Аудио</string>
    <string name="clickable">Clickable</string>
    <string name="load">Загрузить</string>
    <string name="play">Открыть</string>
    <string name="coordinates">Координаты: %1$.6f, %2$.6f</string>
    <string name="coordinates_label">Координаты:</string>
    <string name="coordinates_format">Координаты: %1$.4f, %2$.4f</string>
    <string name="coordinate_format">%.6f</string>
    <string name="full_screen">Full screen</string>
    <string name="close">Закрыть</string>
    <string name="save">Сохранить</string>
    <string name="button_icon">Button icon</string>
    <string name="ok">ПОНЯТНО</string>
    <string name="note">Заметка</string>
    <string name="no_title">Пустой заголовок</string>
    <string name="no_body">Нет описания</string>
    <string name="reload">Reload</string>

    <!-- new-->


</resources>